// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CartQuantityPicker stories snapshot > AtStockLimit story renders and matches snapshot 1`] = `
<div
  class="relative flex w-fit max-w-full flex-col items-start gap-2"
>
  <label
    class="items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 block text-left font-sans text-base font-semibold leading-6 text-card-foreground"
    data-slot="label"
    for="cart-qty-_r_4_"
  >
    Quantity
  </label>
  <div
    aria-label="Quantity for the product"
    class="inline-flex items-center border border-input rounded-ui overflow-hidden"
    role="group"
  >
    <button
      aria-label="Decrement Quantity for the product"
      class="px-2.5 py-1.5 text-base font-semibold leading-normal text-foreground hover:bg-muted transition-colors focus-visible:outline-2 focus-visible:outline-offset-[-2px] disabled:opacity-50 disabled:cursor-not-allowed"
      data-testid="quantity-decrement"
    >
      −
    </button>
    <input
      aria-describedby="cart-qty-_r_4_-error"
      class="w-9 min-w-[2ch] text-center text-sm font-semibold leading-normal text-foreground border-0 bg-transparent focus-visible:outline-2 focus-visible:outline-offset-[-2px] disabled:opacity-50 disabled:cursor-not-allowed [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
      id="cart-qty-_r_4_"
      max="10"
      min="0"
      step="1"
      type="number"
      value="10"
    />
    <button
      aria-label="Increment Quantity for the product"
      class="px-2.5 py-1.5 text-base font-semibold leading-normal text-foreground hover:bg-muted transition-colors focus-visible:outline-2 focus-visible:outline-offset-[-2px] disabled:opacity-50 disabled:cursor-not-allowed"
      data-testid="quantity-increment"
      disabled=""
    >
      +
    </button>
  </div>
  <p
    aria-live="polite"
    class="text-sm font-medium leading-none text-left absolute top-full left-0 mt-1 w-max max-w-[min(100%,18rem)] text-destructive"
    id="cart-qty-_r_4_-error"
    role="alert"
  >
    Maximum stock reached
  </p>
</div>
`;

exports[`CartQuantityPicker stories snapshot > Default story renders and matches snapshot 1`] = `
<div
  class="relative flex w-fit max-w-full flex-col items-start gap-2"
>
  <label
    class="items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 block text-left font-sans text-base font-semibold leading-6 text-card-foreground"
    data-slot="label"
    for="cart-qty-_r_0_"
  >
    Quantity
  </label>
  <div
    aria-label="Quantity for the product"
    class="inline-flex items-center border border-input rounded-ui overflow-hidden"
    role="group"
  >
    <button
      aria-label="Decrement Quantity for the product"
      class="px-2.5 py-1.5 text-base font-semibold leading-normal text-foreground hover:bg-muted transition-colors focus-visible:outline-2 focus-visible:outline-offset-[-2px] disabled:opacity-50 disabled:cursor-not-allowed"
      data-testid="quantity-decrement"
      disabled=""
    >
      −
    </button>
    <input
      class="w-9 min-w-[2ch] text-center text-sm font-semibold leading-normal text-foreground border-0 bg-transparent focus-visible:outline-2 focus-visible:outline-offset-[-2px] disabled:opacity-50 disabled:cursor-not-allowed [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
      id="cart-qty-_r_0_"
      min="0"
      step="1"
      type="number"
      value="1"
    />
    <button
      aria-label="Increment Quantity for the product"
      class="px-2.5 py-1.5 text-base font-semibold leading-normal text-foreground hover:bg-muted transition-colors focus-visible:outline-2 focus-visible:outline-offset-[-2px] disabled:opacity-50 disabled:cursor-not-allowed"
      data-testid="quantity-increment"
    >
      +
    </button>
  </div>
</div>
`;
